# rust-everywhere

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: rust.yml
api/: .env  .gitignore  Cargo.toml  acceptance-test.sh  build-release.sh  readme.md  sqlx.sh
api/migrations/: 20230625211844_create-note.sql
api/src/: axum_extractors.rs  main.rs  note_service.rs  notes_model.rs  notes_routes.rs
app/: Cargo.toml
app/src/: axum_extractors.rs  axum_middleware.rs  lib.rs  notes_model.rs  notes_routes.rs  notes_service.rs
app/templates/: base.html
app/templates/components/: nav-bar.html
app/templates/notes/: edit.html  index.html  search.html  show.html
native-app/src-tauri/: Cargo.toml  tauri.conf.json
native-app/src-tauri/src/: main.rs
server-side/: .gitignore  Cargo.toml  build-release.sh
server-side/src/: main.rs
spa/: Cargo.toml  index.html  package.json  sw.js
spa-server/: .gitignore  Cargo.toml  Cross.toml  build-release.sh  package-lock.json  package.json  sw.js
spa-server/src/: main.rs
spa-service-worker/: Cargo.toml  build-release.sh  package-lock.json  sw.js
spa-service-worker/scripts/: debug.sh
spa/scripts/: debug.sh  release.sh
spa/src/: lib.rs
