[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
sqlx = { version = "0.7.0-alpha.3", features = [ "runtime-tokio", "sqlite", "macros", "chrono", "uuid" ] }
chrono = { version = "0.4", features = ["serde"]  }
uuid = { version = "1.3.4", features = ["v4", "serde"] }
axum = { version = "0.6.18", features = ["query"] }
serde = "1.0.164"
validator = { version = "0.16.0", features = ["derive"] }
