[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.67"
tower-service = "0.3.2"
axum = { version = "0.6.7", default-features = false, features = ["form", "query", "macros"] }
askama_axum = "0.3.0"
askama = "0.12.0"
uuid = { version = "1.3.0", features = ["js", "serde", "v4"] }
serde = { version = "1.0.155" }
pulldown-cmark = "0.8"
validator = { version = "0.16.0", features = ["derive"] }
cookie = "0.17.0"
axum-extra = { version = "0.7.2", features = ["cookie"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
http = "0.2"
