[package]
name = "spa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
app = { path = "../app" }
futures = "0.3.28"
serde = { version = "1.0.171" }
axum = { version = "0.6.7", default-features = false }
tower-service = "0.3.1"
http-body = "0.4.5"
serde-wasm-bindgen = "0.5.0"
