[package]
name = "spa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
app = { path = "../app", features = ["public"] }
tower-service = "0.3.1"
axum-browser-adapter = { version = "0.2.0" }